[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/gun_0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/kust_2_iso.png" type="Texture" id=2]
[ext_resource path="res://Sprites/kust_1_iso.png" type="Texture" id=3]
[ext_resource path="res://Hunter_iso.gd" type="Script" id=4]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 474.763

[node name="Hunter_iso" type="Node2D"]
script = ExtResource( 4 )
Bullet = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
mode = 1
cell_size = Vector2( 128, 64 )
format = 1

[node name="kust_2_iso" type="Sprite" parent="."]
position = Vector2( 2.27277, 7.71249 )
rotation = 0.299283
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="gun_0" type="Sprite" parent="."]
position = Vector2( 4.65088, -2.53647 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
offset = Vector2( 264.004, -2.37842 )

[node name="kust_1_iso" type="Sprite" parent="."]
position = Vector2( 1.07581, -7.69351 )
rotation = 0.288126
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="DetectZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectZone"]
position = Vector2( 1.26257, -3.28906 )
shape = SubResource( 1 )
[connection signal="area_entered" from="DetectZone" to="." method="_on_DetectZone_area_entered"]
[connection signal="area_exited" from="DetectZone" to="." method="_on_DetectZone_area_exited"]
